--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,206 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100vw;
+  height: 100vh;
+  /* display: flex; */
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  padding: 0%;
+  margin: 0;
+  background-color: #121212;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+nav {
+  height: 60px;
+  width: 100%;
+  margin: 0;
+  border-bottom: 1px solid grey;
+  display: grid;
+  place-items: center;
+}
+
+nav h1 {
+  margin: 0;
+  font-family: Helvetica, Arial, sans-serif;
+  color: white;
+  font-size: 45px;
+}
+.game-container {
+  width: 100vw;
+  height: calc(100vh - 170px);
+  display: flex;
+  align-items: center;
+  padding-top: 25px;
+  flex-direction: column;
+}
+
+.grid {
+  box-sizing: border-box;
+  width: 450px;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  flex: 33%;
+  display: flex;
+  flex-direction: row;
+  margin: 5px 0px;
+}
+
+.letter {
+  flex: 33%;
+  margin: 0px 5px;
+  height: 5rem;
+  box-sizing: border-box;
+  border: 2px solid grey;
+  border-radius: 5px;
+  display: grid;
+  place-items: center;
+  font-size: 30px;
+  font-weight: bolder;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#error {
+  background-color: #3a393c;
+}
+
+.keyboard {
+  width: 700px;
+  height: 300px;
+  margin-top: 20px;
+}
+
+.key-row1,
+.key-row2,
+.key-row3 {
+  flex: 33%;
+  display: flex;
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+  margin: 5px;
+}
+
+.key {
+  width: 50px;
+  height: 70px;
+  margin: 5px;
+  border-radius: 4px;
+  display: grid;
+  place-items: center;
+  font-size: 20px;
+  background-color: grey;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+}
+
+.big {
+  width: 100px;
+}
+.used {
+  background-color: #3a393c;
+}
+.contains {
+  background-color: #b49f39;
+}
+.correct {
+  background-color: #528d4e;
+}
+#used {
+  background-color: #3a393c;
+}
+#contains {
+  background-color: #b49f39;
+}
+#correct {
+  background-color: #528d4e;
+}
+
+.blurred {
+  filter: blur(5px);
+}
+
+.modal {
+  font-family: sans-serif;
+  position: absolute;
+  left: 50%;
+  top: 15%;
+  transform: translateX(-50%);
+  background: #adadad;
+  border: 2px solid white;
+  border-radius: 5px;
+  box-shadow: 0px 10px 20px gray;
+  width: 25%;
+  height: 20rem;
+  color: black;
+}
+
+.modal > h1 {
+  border-bottom: 2px solid black;
+}
+.modal > h2 {
+  margin: 50px 0px;
+}
+
+.hidden {
+  visibility: hidden;
+  position: absolute;
+}
+
+.again {
+  font-size: 150%;
+  color: white;
+  border: 2px solid black;
+  padding: 5px;
+  background-color: green;
+  border-radius: 5px;
+  text-decoration: none;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .game-container {
+    height: 100vh;
   }
-  to {
-    transform: rotate(360deg);
+
+  .grid {
+    width: 300px;
+    height: 350px;
+    margin-left: -15px;
+  }
+
+  .letter {
+    height: auto;
+  }
+
+  .key {
+    width: 30px;
+    margin: 3px;
+    height: 35px;
+    font-size: 75%;
+  }
+
+  .key-row1,
+  .key-row2,
+  .key-row3 {
+    margin-left: -5px;
+  }
+
+  .keyboard {
+    width: 100vw;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .big {
+    width: 50px;
   }
 }
